cmake_minimum_required(VERSION 2.8)
project( RTAudioTest )
include_directories(/Users/shengyinwu/Documents/Projects/OpenProject/rtaudio-4.1.1)
add_executable(RTAudioTest Source.cpp)
add_library(RTAudioWrapper RtAudioMicrophoneWrapper.cpp RtAudioSpeakerWrapper.cpp)
target_link_libraries(RTAudioTest "-framework CoreAudio")
target_link_libraries( RTAudioTest ${COREAUDIO_LIBRARY} pthread /Users/shengyinwu/Documents/Projects/OpenProject/rtaudio-4.1.1/build/librtaudio.dylib RTAudioWrapper)